# HuGGeMs-update-pipeline

./: HuGGeMs-datasets-download.md  HuGGeMs-update-environment.yml  README.md  build_conda.sh  pyproject.toml  requirements.txt  setup_huggems_env.sh
conda.recipe/: build.sh  meta.yaml  run_test.py
huggems/: __init__.py  cli.py  utils.py
huggems.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
huggems/commands/: __init__.py  markers.py  presence.py
