[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huggems"
version = "0.1.0"
description = "HuGGeMs - Human Gut Microbial Gene Markers Update Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["bioinformatics", "metagenomics", "gut-microbiome", "marker-genes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "click>=8.0.0",
    "biopython>=1.79",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
all = [
    "drep>=3.4.0",
    "biopython>=1.79",
]

[project.scripts]
huggems = "huggems.cli:cli"

[project.urls]
Homepage = "https://github.com/R840chen/HuGGeMs-update-pipeline"
Documentation = "https://github.com/R840chen/HuGGeMs-update-pipeline#readme"
Repository = "https://github.com/R840chen/HuGGeMs-update-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["huggems*"]
